--- a/style.css
+++ b/style.css
@@ -6,16 +6,11 @@ html,body{
     height: 100%;
     width: 100%;
 }
-.hide{
-    display: none;
-}
 .screen-text{
     position: relative;
-    top: 40%;
-    margin-top: -1vh;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+    padding-top: 30px;
 }
 .screen-text h2{
     font-weight: 300;
@@ -34,10 +29,6 @@ html,body{
     body{
         background-color: #D864A9;
     }
-    #small{
-        display: block;
-        font-size: 22px;
-    }
     .screen-text h2{
         font-weight: 100;
         font-size: 18px;
@@ -48,11 +39,8 @@ html,body{
 }
 @media screen and (min-width: 481px) and (max-width:1023px) {
     body{
-        background-color: #F7DB6A;
-    }
-    #medium{
-        display: block;
-        font-size: 28px;
+        display: grid;
+        grid-template-rows: 33.5% 66.5% 100%;
     }
     .screen-text h2{
         font-weight: 200;
@@ -61,12 +49,28 @@ html,body{
     .screen-text p{
         font-size: 14px;
     }
+    #small{
+        background-color: rgba(255, 0, 0, 0.308);
+        }
+    #medium{
+        background-color: rgba(255, 196, 0, 0.596);
+    }
+    #large{
+        background-color: rgba(0, 128, 0, 0.61);
+    }
 }
 @media screen and (min-width: 1024px){
     body{
-        background-color: #7AA874;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+    #small{
+        background-color: rgba(255, 0, 0, 0.308);
+        }
+    #medium{
+        background-color: rgba(255, 196, 0, 0.596);
     }
     #large{
-        display: block;
+        background-color: rgba(0, 128, 0, 0.61);
     }
 }
